added week 6 reflection

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
-        <p>Last Updated: 5/11/2018</p>
+        <p>Last Updated: 5/20/2018</p>
         <p>Career Buddies: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a> and <a href="https://bootcamp-coders.cnm.edu/~jhawkins20/career-portfolio/index.html" target="_blank">Jullyane Hawkins</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
@@ -135,6 +135,10 @@
     <p>Our capstone has been an interesting project. What I thought would take me an afternoon to write tends to turn into three. I am keeping that in consideration when planning my weekend sessions of coding. We are almost done writing our classes and hopefully done with unit testing by midweek next week, but we will see how that goes. It is definitely nice to see the stacks beginning to come together and form a stronger concept of how it all works.</p>
     <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;How much you struggle right now absolutely doesn’t indicate how good of a programmer you will be later.&quot; Needed this reminder as we complete the first half of our bootcamp. I have learned so much! <a href="https://t.co/hkUt6zX1oY">https://t.co/hkUt6zX1oY</a></p>&mdash; Yvette Johnson-Rodgers (@itsyvejr) <a href="https://twitter.com/itsyvejr/status/994982003865829376?ref_src=twsrc%5Etfw">May 11, 2018</a></blockquote>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+    <h2>Week 6 Reflection</h2>
+    <p>We <strong>only</strong> have four weeks left in the bootcamp, during which time we will be completing our capstone projects and our PWPs. I am pretty excited <a href="https://bootcamp-coders.cnm.edu/~yjohnson6/professionalwebpage/public_html/index.php#" target="_blank">with my PWP,</a> but it would be easy to soak too much time into it, I think. So for now, I am trying to keep it simple and add complexity as I go. The thing most on my mind is adding projects to my portfolio when we will be so busy with capstone. I am trying to bring more creativity and fun to my work, but I am lacking in some free time.</p>
+    <p>As far as capstone goes, I feel like I have learned a lot of PHP and PHPUnit Testing. Our team dynamics are mostly smooth. During times of stress, personalities come out more, but they are about the same as at the start. I like the fact that we are working in an agile framework and scrumming just like we would in a real job.</p>
+    <p>I am debating as to whether or not I should begin applying for positions. I feel like I should wait till after bootcamp, but it could take a while to get a response, and I know that getting the first job will be the hardest.</p>
+    <p>The only other news to report is that I am trying to get a better grip on managing my frustrations. I sometimes still struggle to ask the right questions but I am not sure yet how to really improve. On the plus side, the modularity and method of programming and debugging is starting to come together for me, and I am able to think more like a programmer than I was even in week 5.</p>
     </body>
 </html>
