added week 8 reflection

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
-        <p>Last Updated: 5/20/2018</p>
+        <p>Last Updated: 6/3/2018</p>
         <p>Career Buddies: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a> and <a href="https://bootcamp-coders.cnm.edu/~jhawkins20/career-portfolio/index.html" target="_blank">Jullyane Hawkins</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
@@ -140,5 +140,8 @@
     <p>As far as capstone goes, I feel like I have learned a lot of PHP and PHPUnit Testing. Our team dynamics are mostly smooth. During times of stress, personalities come out more, but they are about the same as at the start. I like the fact that we are working in an agile framework and scrumming just like we would in a real job.</p>
     <p>I am debating as to whether or not I should begin applying for positions. I feel like I should wait till after bootcamp, but it could take a while to get a response, and I know that getting the first job will be the hardest.</p>
     <p>The only other news to report is that I am trying to get a better grip on managing my frustrations. I sometimes still struggle to ask the right questions but I am not sure yet how to really improve. On the plus side, the modularity and method of programming and debugging is starting to come together for me, and I am able to think more like a programmer than I was even in week 5.</p>
+    <h2>Week 8 Reflection</h2>
+    <p>I don't want to be inaccurate, but it feels like the work is going up exponentially! I am learning a lot, and spending a lot of late nights to earn that knowledge. It feels good to have the lightbulb going off so often. But I also recognize that I need to practice healthier habits and take breaks.</p>
+    <p>There have been some difficulties for my team in meeting deadlines. We will have to put in a lot more work this week to make it all happen. Luckily, PWP is due Wednesday, so that will be one less thing to worry about as Demo Day draws near. I wish I had been clocking my time while working on PWP, because I would not be surprised if it was 40 hours by now! I am in need of ordering business cards, but just haven't had the time to choose cards yet. That's on the to-do list for Monday.</p>
     </body>
 </html>
