added demo day reflection

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
-        <p>Last Updated: 6/3/2018</p>
+        <p>Last Updated: 6/14/2018</p>
         <p>Career Buddies: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a> and <a href="https://bootcamp-coders.cnm.edu/~jhawkins20/career-portfolio/index.html" target="_blank">Jullyane Hawkins</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
-        <a href="http://www.yvette.io/" target="_blank">Personal Page - Coming Soon</a>
+        <a href="http://www.yvette.io/" target="_blank">Personal Page</a>
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
         <a href="assets/yvette-resumev1.pdf" target="_blank">Resume v1</a>
         <a href="assets/yvette-resumev2.pdf" target="_blank">Resume v2</a>
@@ -143,5 +143,7 @@
     <h2>Week 8 Reflection</h2>
     <p>I don't want to be inaccurate, but it feels like the work is going up exponentially! I am learning a lot, and spending a lot of late nights to earn that knowledge. It feels good to have the lightbulb going off so often. But I also recognize that I need to practice healthier habits and take breaks.</p>
     <p>There have been some difficulties for my team in meeting deadlines. We will have to put in a lot more work this week to make it all happen. Luckily, PWP is due Wednesday, so that will be one less thing to worry about as Demo Day draws near. I wish I had been clocking my time while working on PWP, because I would not be surprised if it was 40 hours by now! I am in need of ordering business cards, but just haven't had the time to choose cards yet. That's on the to-do list for Monday.</p>
+    <h2>Demo Day Reflection</h2>
+    <p>It was very tense leading up to Demo Day, but our group presentation went well. I really enjoyed meeting potential employers and talking tech with people that came to check out our project. I am hearing that it is a great time to find a job as a web developer in Albuquerque right now, so I am optimistic as I start this next phase of my career shift to reach out to the contacts I met last night.</p>
     </body>
 </html>
