--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
         <a href="http://www.yvette.io/" target="_blank">Personal Page</a>
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
-        <a href="assets/yvette-resumev1.pdf" target="_blank">Resume v1</a>
-        <a href="assets/yvette-resumev2.pdf" target="_blank">Resume v2</a>
-        <a href="assets/Yvette-Johnson-Rodgers-Resume.pdf" target="blank">Resume v3</a>
-        <a href="assets/YvetteDescartesLabLetter.pdf" target="_blank">Opportunity Letter</a>
+        <a href="#" target="_blank">Resume v1</a>
+        <a href="#" target="_blank">Resume v2</a>
+        <a href="#" target="blank">Resume v3</a>
+        <a href="#" target="_blank">Opportunity Letter</a>
 
     </nav>
     <h2>Quantitative accomplishments</h2>
